# truth-or-dare-bot

./: .env.example  .gitignore  Cargo.toml  diesel.toml  readme.md
.github/workflows/: release.yml
bot/: Cargo.toml
bot/src/: commands.rs  helper.rs  main.rs
database/: Cargo.toml
database/migrations/2025-05-20-122902_generate_truth/: up.sql
database/migrations/2025-05-20-122923_generate_dare/: up.sql
database/migrations/2025-05-23-174132_sample_data/: up.sql
database/migrations/2025-05-26-164157_moderation_log/: up.sql
database/migrations/2025-05-26-165045_error_log/: up.sql
database/migrations/2025-05-26-165049_user_log/: up.sql
database/src/: mod.rs  model.rs  schema.rs  service.rs
