[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = {version = "2.2.10", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"]} 
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
poise = {version = "0.6.1"}
chrono = {version = "0.4.41", features = ["serde"]}