[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = {version = "2.2.10", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono", "extras"]} 
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
poise = {version = "0.6.1"}
chrono = {version = "0.4.41", features = ["serde"]}
diesel_migrations = "2.2.0"
libsqlite3-sys = { version = ">=0.8.0, <0.33.0", optional = true, features = ["bundled"] }